--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,8 @@
 //```
 //a.mod-btn ボタン
 //a.mod-btn(class=':hover') ボタン
+//a.mod-btn(class=':active') ボタン
+//a.mod-btn(class=':focus') ボタン
 //```
 .mod-btn {
 	display: inline-block;
@@ -13,6 +15,12 @@
 	&:hover {
 		background: lime;
 	}
+	&:active {
+		box-shadow: inset 0 0 5px rgba(0, 0, 0, .5);
+	}
+	&:focus {
+		box-shadow: 0 0 5px rgba(0, 0, 150, .5);
+	}
 }
 
 
@@ -21,7 +29,7 @@
 //```
 //.mod-entrySeriesList
 //	.mod-entrySeriesList-body
-//		.mod-entrySeriesGroup My 
+//		.mod-entrySeriesGroup My name
 //		.mod-entrySeriesGroup is
 //		.mod-entrySeriesGroup Geckotang
 //```
